[package]
name = "key-share-client-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threshold_crypto = "0.4.0"
hex = "0.4"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive"] }
base64 = "0.22.1"
key-share-challenge = { path = "../key-share-challenge" }